Fixing white space on iphone issue

--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,9 @@
 }
 
 body {
-    /*background-color: #172434;
-    background-image: linear-gradient(62deg, rgb(21, 32, 48) 0%, #172434 100%);*/
+    background-color: #172434;
     background: linear-gradient(62deg, #172434, #1a2c3f);
+    height: 100%;
 }
 
 header nav {
